updated the originals section for the docker file

--- a/src/originals/docker/9/panl.properties
+++ b/src/originals/docker/9/panl.properties
@@ -15,8 +15,8 @@
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-#                           Which Solr Client To Use
-#                           ----- ---- ------ -- ---
+#                            Which Solr Client To Use
+#                            ----- ---- ------ -- ---
 # Choose the correct SolrJ client for the Solr installation that you require,
 # by default, it is the CloudSolrClient.
 #
@@ -184,4 +184,15 @@ panl.server.extra=
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.collection.mechanical-pencils=mechanical-pencils.panl.properties
+panl.collection.simple-date=sample/panl/simple-date/simple-date.panl.properties
+
+panl.collection.mechanical-pencils=sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties,\
+    sample/panl/mechanical-pencils-or/mechanical-pencils-or-separator.panl.properties,\
+    sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
+    sample/panl/mechanical-pencils/mechanical-pencils-more.panl.properties,\
+    sample/panl/mechanical-pencils/mechanical-pencils-multi-separator.panl.properties,\
+    sample/panl/mechanical-pencils-extra/mechanical-pencils-extra.panl.properties
+
+panl.collection.book-store=sample/panl/book-store/book-store.panl.properties,\
+  sample/panl/book-store/book-store-hl.panl.properties,\
+  sample/panl/book-store/author-alphabetical.panl.properties
