--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -642,14 +642,14 @@ solr.highlight=false
 #                                ~ ~ ~ * ~ ~ ~
 
 
-# <field "name"="id" "type"="string" "stored"="true" "required"="true" "multiValued"="false" />
+# <field multiValued="false" name="id" required="true" stored="true" type="string" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
 panl.field.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
 panl.uniquekey.i=true
 
-# <field "name"="solr_date" "type"="pdate" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="solr_date" stored="true" type="pdate" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.S=solr_date
 panl.name.S=Solr Date
@@ -667,7 +667,7 @@ panl.type.S=solr.DatePointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.S=
 
-# <field "name"="text_date" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="text_date" stored="true" type="string" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.t=text_date
 panl.name.t=Text Date
@@ -687,7 +687,7 @@ panl.type.t=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.t=
 
-# <field "name"="year" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="year" stored="true" type="pint" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.y=year
 panl.name.y=Year
@@ -720,7 +720,7 @@ panl.type.y=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.y=
 
-# <field "name"="decade" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="decade" stored="true" type="pint" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.d=decade
 panl.name.d=Decade
@@ -753,7 +753,7 @@ panl.type.d=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.d=
 
-# <field "name"="month" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="month" stored="true" type="string" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.m=month
 panl.name.m=Month
@@ -773,7 +773,7 @@ panl.type.m=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.m=
 
-# <field "name"="day" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="day" stored="true" type="pint" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.D=day
 panl.name.D=Day
@@ -806,7 +806,7 @@ panl.type.D=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.D=
 
-# <field "name"="week_day" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
+# <field indexed="true" multiValued="false" name="week_day" stored="true" type="string" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.w=week_day
 panl.name.w=Week Day
@@ -826,7 +826,7 @@ panl.type.w=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.w=
 
-# <field "name"="text" "type"="text_general" "indexed"="true" "stored"="true" "multiValued"="true" />
+# <field indexed="true" multiValued="true" name="text" stored="true" type="text_general" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.T=text
 panl.name.T=Text
