--- a/src/testintegrationspider/resources/panl.spider.properties
+++ b/src/testintegrationspider/resources/panl.spider.properties
@@ -1,6 +1,7 @@
-solrj.client=CloudSolrClient
+solrj.client=Http2SolrClient
+#solrj.client=CloudSolrClient
 
-solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
+solr.search.server.url=http://localhost:8983/solr
 
 panl.results.testing.urls=true
 
