updated panl.properties for docker instance

--- a/src/docker/panl.properties
+++ b/src/docker/panl.properties
@@ -23,6 +23,7 @@
 # NOTE: What the solr.search.server.url will be will depend on the client that
 #       you choose.  The SolrJ client __MUST__ be one of
 #
+# - CloudHttp2SolrClient
 # - Http2SolrClient
 # - HttpJdkSolrClient
 # - LBHttp2SolrClient
@@ -191,11 +192,11 @@ panl.server.extra=
 panl.collection.simple-date=sample/panl/simple-date/simple-date.panl.properties
 
 panl.collection.mechanical-pencils=sample/panl/mechanical-pencils-or/mechanical-pencils-or.panl.properties,\
-    sample/panl/mechanical-pencils-or/mechanical-pencils-or-separator.panl.properties,\
-    sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
-    sample/panl/mechanical-pencils/mechanical-pencils-more.panl.properties,\
-    sample/panl/mechanical-pencils/mechanical-pencils-multi-separator.panl.properties,\
-    sample/panl/mechanical-pencils-extra/mechanical-pencils-extra.panl.properties
+  sample/panl/mechanical-pencils-or/mechanical-pencils-or-separator.panl.properties,\
+  sample/panl/mechanical-pencils/mechanical-pencils.panl.properties,\
+  sample/panl/mechanical-pencils/mechanical-pencils-more.panl.properties,\
+  sample/panl/mechanical-pencils/mechanical-pencils-multi-separator.panl.properties,\
+  sample/panl/mechanical-pencils-extra/mechanical-pencils-extra.panl.properties
 
 panl.collection.book-store=sample/panl/book-store/book-store.panl.properties,\
   sample/panl/book-store/book-store-hl.panl.properties,\
