Added comments to the gradle.properties file

--- a/src/main/resources/gradle.properties
+++ b/src/main/resources/gradle.properties
@@ -1,3 +1,13 @@
+# this is the Panl version - which is the current build number - this won't
+# change between Solr integration versions
 panl.version=2.2.0
+
+# this is the Solr major version number that the version of Panl will
+# integrate with - this will change with the branch numbers and Solr
+# integration versions
 panl.solr.version=9
+
+# This is the latest version of the Solr server that the Panl server has been
+# tested against - only currently used for the docker building which will
+# download the version.  This will change with the above number
 solr.server.version=9.10.0
