Added in $panl.lpse.ignore replacement for the generator

--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -777,7 +777,7 @@ $panl.lpse.facetorder
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.lpse.ignore=
+$panl.lpse.ignore
 
 #                      Panl Results Field Configuration
 #                      ---- ------- ----- -------------
