--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -995,7 +995,7 @@ text
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-#ERROR - Expecting key of 'panl.lpse.ignore=' but was not found.
+panl.lpse.ignore=id
 
 #                      Panl Results Field Configuration
 #                      ---- ------- ----- -------------
