--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -1264,7 +1264,7 @@ text
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-#ERROR - Expecting key of 'panl.lpse.ignore=' but was not found.
+panl.lpse.ignore=id
 
 #                      Panl Results Field Configuration
 #                      ---- ------- ----- -------------
